# MyVirusScanner

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  utils.py
checks/: __init__.py  brew.py  browserext.py  filevault.py  mac_updates.py  malware.py  netports.py  npm.py  persistence.py  pip.py  rootkit.py  useraudit.py
docs/explanations/: yara.md
docs/plans/: 00-initial_plan.md
tests/: test_cli.py
yara_rules/: README.md  example_rules.yar
