[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "macsecscan"
version = "0.1.0"
description = "Scan your Mac for security concerns from the command line."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ugochi Jones", email = "ugochi@jonestechnicalenterprises.com" }
]
dependencies = [
  "click>=8.1.7",
  "colorama>=0.4.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-click>=1.1.0"
]

[project.scripts]
macsecscan = "main:cli"

[tool.hatch.build]
packages = ["checks"]
py-modules = ["main", "utils"]
include = ["yara_rules/**"]

